 * An admin plugin to add/remove fields from the database
 * Added options to add/remove fields scripts to add/remove a dataset

2008-02-21 cjg
 * generate_views now works with the new Update::Views module. Closes #3264
 * Added --view --lang and --generate options to generate_views

2008-02-21 cjg
 * Added a "uri" method to dataobj which returns a currently unresolveable URI
    for any dataobject. We might make themresolvable later.
 * Added this URI as an "id" attribute when XML exporting data.

2008-02-23 tdb
 * Changed user check to be overridable by a use() pragma: "no_check_user"
 * Made test_config cross-platform with a new Platform call: "read_perl_script"

2008-02-25 tdb
 * Don't squash ordervalues where a dataset is !indexable
 * Truncate ordervalues values before insertion
 * The "no_check_user" pragma from r3357

2008-02-27 tdb
 * Made Boolean respect "input_rows"
 * add/remove field plugin now does the whole process using a workflow
 * Tool for boot-strapping the metafield dataset

2008-02-28 tdb
 * Corrected link in editor alert email, fixing #3286
 * Fixed an undef warning in EPrints::Email

2008-03-04 tdb
 * Added missing Perl export plugin
 * Now adds default phrases for sub-fields/set options
 * Fixed HTTPS support/sub-directory support simplified

2008-03-05 tdb
 * Added missing mysql_version_from_dbh method, fixing #3301

2008-03-07 tdb
 * Revised lookup scripts to work with Oracle/abstracted results rendering into
    an Extras method
 * Put javascripts inside CDATA sections, fixing #3303
 * Added childNodes and firstChild to XML::DOM
 * Don't use a SIG handler when making calls - breaks eval() wrappers in
    libraries
 * Tool to create unlimited number of randomly-generated eprints

2008-03-11 tdb
 * Modified oai_accesslog to export all datasets
 * Fixed bug in Repository::call always returning an array

2008-03-12 tdb
 * Added datestamp to metafields
 * Merged r3371 and r3368 - support for http_* config variables

